Filled in blog; Customized scrollbar; Minor fixes

--- a/css/footer.css
+++ b/css/footer.css
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    background-color: #33333316;
+    background-color: #f1eeee;
     color: #918d8d;
 }
 .footer-copyright {
