--- a/css/header.css
+++ b/css/header.css
@@ -27,9 +27,9 @@ header {
 .navigation-menu-content a {
     text-decoration: none;
     color: #000;
-    padding: 10px;
+    padding: 13px;
     border-radius: 5px;
-    font-size: 1.25em;
+    font-size: 1.35em;
 }
 
 .navigation-menu-content a:hover {
